<resources>
    <string name="app_name">ChoCho</string>
    <string name="action_settings">Settings</string>
    <string name="error_unknown">Unknown error</string>
    <string name="db_update_success">Db update successful</string>
    <string name="db_update_failure">Db update failure</string>
    <!-- Strings for menu options -->
    <string name="saveAction">Save</string>
    <string name="deleteAction">Delete</string>
    <!-- Strings for Main Activity -->
    <string name="allModels">All Models</string>
    <string name="locomotives">Locomotives</string>
    <string name="wagons">Wagons</string>
    <string name="search">Search</string>
    <!-- Strings for Editor Activity -->
    <string name="image">Image</string>
    <string name="type">Type</string>
    <string name="subtype">Sub Type</string>
    <string name="modelName">Model Name</string>
    <string name="article">Article</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="railwayCompany">Railway Company</string>
    <string name="note">Note</string>
    <!-- Strings for Spinners -->
    <string name="type_locomotive">Locomotive</string>
    <string name="type_wagon">Wagon</string>
    <string name="subtype_electric">Electric</string>
    <string name="subtype_steam">Steam</string>
    <string name="subtype_diesel">Diesel</string>
    <string name="subtype_passenger">Passenger</string>
    <string name="subtype_freight">Freight</string>
    <!-- Strings for Menus -->
    <string name="allTrains">All Models</string>
    <string name="deleteDialog">Delete this model ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="add_new_model">Add new model</string>

    <string name="signup">Sign Up</string>
    <string name="auth_error_password">Password length must be at least 6 symbols</string>
    <string name="auth_error_email">Email is not valid</string>


    <string name="ok">OK</string>
    <string name="auth_confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="auth_error_password_not_same">Passwords do not match</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>

    <string name="welcome">Welcome!</string>

    <string name="auth_create_account">Create Account</string>
    <string name="auth_verification_title">Check your inbox</string>
    <string name="auth_verification_msg">You have been sent email with verification link</string>
    <string name="auth_name_error">Name must be more than 1 symbol</string>


</resources>
